refactor: add adjusts
