# docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/api/v1/auth/signup": {
+        "/api/v1/voters": {
             "post": {
-                "description": "Register an user.",
+                "description": "Create a new voter",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,132 +14,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Auth"
+                    "voters"
                 ],
-                "summary": "Register user",
+                "summary": "Create a new voter",
                 "parameters": [
                     {
-                        "description": "Corpo da solicitação",
+                        "description": "Voter data",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/signup.SignupInputDTO"
+                            "$ref": "#/definitions/create_voter.CreateVoterInput"
                         }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/common_ptr.UserFormatted"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InvalidOperationError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InternalError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/transactions": {
-            "post": {
-                "description": "Create a new transaction",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "transactions"
-                ],
-                "summary": "Create a new transaction",
-                "parameters": [
-                    {
-                        "description": "Transaction data",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/create_transaction.CreateTransactionInputDTO"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/presenters.GetUsersOutputFormatted"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InvalidOperationError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InternalError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/users": {
-            "get": {
-                "description": "Returns a list of users from the database.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get users",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Number of items per page",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/presenters.GetUsersOutputFormatted"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InvalidOperationError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/shared_err.InternalError"
+                            "$ref": "#/definitions/common_ptr.VoterFormatted"
                         }
                     }
                 }
@@ -147,149 +40,41 @@
         }
     },
     "definitions": {
-        "common_ptr.PaginateResult": {
+        "common_ptr.VoterFormatted": {
             "type": "object",
             "properties": {
-                "has_next_page": {
-                    "type": "boolean",
-                    "example": true
+                "cellphone": {
+                    "type": "string",
+                    "example": "+5511999999999"
                 },
-                "has_prev_page": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "limit": {
-                    "type": "integer",
-                    "maximum": 100,
-                    "minimum": 1,
-                    "example": 20
-                },
-                "next_page": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 2
-                },
-                "page": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
-                },
-                "prev_page": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 1
-                },
-                "total": {
-                    "type": "integer",
-                    "example": 50
-                },
-                "total_pages": {
-                    "type": "integer",
-                    "minimum": 1,
-                    "example": 50
-                }
-            }
-        },
-        "common_ptr.UserFormatted": {
-            "type": "object",
-            "properties": {
                 "created_at": {
                     "type": "string",
-                    "example": "2022-01-01T00:00:00Z"
+                    "example": "2021-01-01T00:00:00Z"
                 },
-                "email": {
+                "full_name": {
                     "type": "string",
-                    "example": "johndoe@example.com"
+                    "example": "John Doe"
                 },
                 "id": {
                     "type": "string",
                     "example": "123"
                 },
-                "name": {
-                    "type": "string",
-                    "example": "John Doe"
-                },
                 "updated_at": {
                     "type": "string",
-                    "example": "2022-01-01T01:00:00Z"
+                    "example": "2021-01-01T00:00:00Z"
                 }
             }
         },
-        "create_transaction.CreateTransactionInputDTO": {
+        "create_voter.CreateVoterInput": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "category_id": {
-                    "type": "string"
-                },
-                "date": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "installment": {
-                    "type": "integer"
-                },
-                "is_installment": {
-                    "type": "boolean"
-                },
-                "is_recurring": {
-                    "type": "boolean"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "presenters.GetUsersOutputFormatted": {
-            "type": "object",
-            "properties": {
-                "pagination": {
-                    "$ref": "#/definitions/common_ptr.PaginateResult"
-                },
-                "users": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/common_ptr.UserFormatted"
-                    }
-                }
-            }
-        },
-        "shared_err.InternalError": {
-            "type": "object",
-            "properties": {
-                "message": {
+                "cellphone": {
                     "type": "string",
-                    "example": "internal error"
-                }
-            }
-        },
-        "shared_err.InvalidOperationError": {
-            "type": "object",
-            "properties": {
-                "message": {
+                    "example": "553199999999"
+                },
+                "full_name": {
                     "type": "string",
-                    "example": "incorrect password"
-                }
-            }
-        },
-        "signup.SignupInputDTO": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
+                    "example": "John Doe"
                 }
             }
         }
