# internal/adapters/primary/http/controllers/create_voter_controller.go
@@ -1,11 +1,9 @@
 package controllers
 
 import (
-	"encoding/json"
-	"net/http"
-
 	"github.com/axel-andrade/opina-ai-api/internal/adapters/primary/http/presenters"
 	"github.com/axel-andrade/opina-ai-api/internal/core/usecases/voter/create_voter"
+	"github.com/gin-gonic/gin"
 )
 
 type CreateVoterController struct {
@@ -17,22 +15,23 @@ func BuildCreateVoterController(uc *create_voter.CreateVoterUC, ptr *presenters.
 	return &CreateVoterController{Usecase: *uc, Presenter: *ptr}
 }
 
-func (ctrl *CreateVoterController) Handle(w http.ResponseWriter, r *http.Request) {
-	var input create_voter.CreateVoterInput
-
-	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
-		http.Error(w, "Invalid request payload", http.StatusBadRequest)
-		return
+// @Summary		Create a new voter
+// @Description	Create a new voter
+// @Tags			voters
+// @Accept			json
+// @Produce		json
+// @Param			body	body		create_voter.CreateVoterInput	true	"Voter data"
+// @Success		201		{object}	common_ptr.VoterFormatted
+// @Router			/api/v1/voters [post]
+func (ctrl *CreateVoterController) Handle(c *gin.Context) {
+	inputMap := c.MustGet("body").(map[string]any)
+	input := create_voter.CreateVoterInput{
+		FullName:  inputMap["full_name"].(string),
+		Cellphone: inputMap["cellphone"].(string),
 	}
 
 	result, err := ctrl.Usecase.Execute(input)
 	output := ctrl.Presenter.Show(result, err)
 
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(output.StatusCode)
-	if data, ok := output.Data.([]byte); ok {
-		_, _ = w.Write(data)
-	} else {
-		http.Error(w, "Invalid data format", http.StatusInternalServerError)
-	}
+	c.JSON(output.StatusCode, output.Data)
 }
